# Luminal

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/kiriko-app/: Cargo.toml
crates/kiriko-app/src/: main.rs
crates/kiriko-audio/: Cargo.toml
crates/kiriko-audio/src/: beat.rs  lib.rs
crates/kiriko-cache/: Cargo.toml
crates/kiriko-cache/src/: lib.rs
crates/kiriko-core/: Cargo.toml
crates/kiriko-core/src/: anim.rs  lib.rs  mask.rs  model.rs  ops.rs  retime.rs  sequence.rs  store.rs  time.rs
crates/kiriko-eval/: Cargo.toml
crates/kiriko-eval/src/: graph.rs  lib.rs
crates/kiriko-gpu/: Cargo.toml
crates/kiriko-gpu/src/: composite.rs  composite.wgsl  lib.rs
crates/kiriko-media/: Cargo.toml
crates/kiriko-media/src/: encode.rs  index.rs  lib.rs  probe.rs
crates/kiriko-project/: Cargo.toml
crates/kiriko-project/src/: lib.rs
crates/kiriko-ui/: Cargo.toml
crates/kiriko-ui/src/: app_state.rs  export.rs  icons.rs  lib.rs  native_menu.rs  pixels.rs  shell.rs  splash.rs  theme.rs
crates/luminal-ui/src/: app_state.rs  shell.rs
crates/lumit-audio/src/: lib.rs  mix.rs
crates/lumit-bridge/: Cargo.toml
crates/lumit-bridge/src/: api.rs  edits.rs  ffi.rs  frb_generated.rs  lib.rs  render.rs  snapshot.rs  state.rs
crates/lumit-cache/src/: disk.rs
crates/lumit-core/src/: fx.rs  model.rs  ops.rs  retime.rs  store.rs
crates/lumit-core/src/fx/: builtins.rs  cpu.rs  markers.rs  maths.rs  mod.rs  resolved.rs  schema.rs  temporal.rs  tests.rs
crates/lumit-eval/src/: graph.rs  lib.rs
crates/lumit-flow/src/: lib.rs
crates/lumit-gpu/: Cargo.toml
crates/lumit-gpu/src/: composite.rs  composite.wgsl  fx.rs  fx_blur.wgsl  fx_chromatic.wgsl  fx_colourbalance.wgsl  fx_contrast.wgsl  fx_datamosh.wgsl  fx_dof.wgsl  fx_echo.wgsl  fx_glitch.wgsl  fx_glow.wgsl  fx_matte_key.wgsl  fx_motionblur.wgsl  fx_rgbsplit.wgsl  fx_saturation.wgsl  fx_scanlines.wgsl  fx_sharpen_simple.wgsl  fx_spectral.wgsl  fx_temperature.wgsl  fx_transform.wgsl  fx_vignette.wgsl  lib.rs  shared_linux.rs
crates/lumit-gpu/src/fx/: blur.rs  colour.rs  common.rs  dof.rs  engine.rs  mod.rs  split.rs  stylise.rs  temporal.rs  tests.rs
crates/lumit-gpu/tests/: exec_skeleton.rs
crates/lumit-media/: Cargo.toml
crates/lumit-media/src/: lib.rs  slate.rs
crates/lumit-project/src/: fixtures.rs  lib.rs
crates/lumit-ui/: Cargo.toml
crates/lumit-ui/src/: app_state.rs  export.rs  fxops.rs  headless.rs  icons.rs  preset.rs  shell.rs  theme.rs
crates/lumit-ui/src/app_state/: compositions.rs  layers.rs  media.rs  mod.rs  playback.rs  preview.rs  previewing.rs  project.rs  tests.rs
crates/lumit-ui/src/shell/: app_update.rs  command_palette.rs  dock.rs  draws.rs  export_actions.rs  eyedropper.rs  geometry_tests.rs  gpu.rs  graph.rs  inspector.rs  mod.rs  overlays.rs  panels.rs  scopes.rs  settings.rs  shortcuts.rs  timeline.rs  widgets.rs
crates/lumit-ui/src/shell/inspector/: channel_picker.rs  controls.rs  effect_rows.rs  lane.rs  mod.rs  tests.rs
crates/lumit-ui/src/shell/timeline/: bottom_bar.rs  menu.rs  panel.rs  tests.rs
docs/: 01-GLOSSARY.md  02-DECISIONS.md  03-DATA-MODEL.md  06-RENDER-PIPELINE.md  07-UI-SPEC.md  08-EFFECTS.md  10-FILE-FORMAT.md  12-PLUGINS.md  15-DESIGN.md  GUIDE.md  audit-2026-07-19.md  implementation-audit-2026-07-20.md  implementation-dependency-graph.md  test-feedback-log.md
docs/flutter-port/: 01-STRATEGY.md  02-UI-INVENTORY.md  03-ARCHITECTURE.md  04-WIDGET-MAP.md  05-PARITY-CHECKLIST.md  06-REMAINING-WORK.md  README.md
docs/impl/: layer-input.md  optical-flow.md  phase-0-kickoff.md  temporal-rerender.md
flutter_ui/: README.md  flutter_rust_bridge.yaml  pubspec.yaml
flutter_ui/lib/: main.dart
flutter_ui/lib/bridge/: bridge.dart
flutter_ui/lib/builder/: item_builder.dart  layer_builder.dart
flutter_ui/lib/icons/: icons.dart
flutter_ui/lib/panels/: effect_controls_panel.dart  panels.dart  preview_isolate.dart  preview_source.dart  timeline_panel.dart  viewer_layer_map.dart  viewer_overlays.dart  viewer_panel.dart  viewer_texture_controller.dart
flutter_ui/lib/panels/timeline/: comp_tabs.dart  fx_keys.dart  graph_editor.dart  graph_maths.dart  graph_speed_lens.dart  graph_time_lens.dart  graph_value_lens.dart  group_header.dart  keyframe_clipboard.dart  keyframe_interp_menu.dart  lane_selection.dart  property_row.dart  property_rows.dart
flutter_ui/lib/shell/: command_palette.dart  dock_widget.dart  menu_bar.dart  settings_window.dart  shell.dart
flutter_ui/lib/src/rust/: api.dart  api.freezed.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
flutter_ui/lib/state/: app_state.dart  dock.dart  settings.dart  workspace.dart
flutter_ui/lib/theme/: theme.dart
flutter_ui/lib/widgets/: controls.dart
flutter_ui/linux/flutter/: generated_plugins.cmake
flutter_ui/linux/runner/: CMakeLists.txt  my_application.cc  viewer_texture_bridge.cc  viewer_texture_bridge.h
flutter_ui/rust_builder/: pubspec.yaml
flutter_ui/rust_builder/android/: build.gradle  settings.gradle
flutter_ui/rust_builder/android/src/main/: AndroidManifest.xml
flutter_ui/rust_builder/ios/: rust_lib_lumit_flutter.podspec
flutter_ui/rust_builder/linux/: CMakeLists.txt
flutter_ui/rust_builder/macos/: rust_lib_lumit_flutter.podspec
flutter_ui/rust_builder/windows/: CMakeLists.txt
flutter_ui/test/: bridge_test.dart  dock_move_test.dart  dock_test.dart  f4_editors_test.dart  fx_lane_test.dart  graph_editor_test.dart  palette_test.dart  settings_test.dart  shell_smoke_test.dart  theme_test.dart  timeline_columns_session_test.dart  timeline_test.dart  viewer_gizmo_test.dart  viewer_layer_map_test.dart  viewer_scopes_test.dart
flutter_ui/windows/: CMakeLists.txt
flutter_ui/windows/flutter/: generated_plugins.cmake
flutter_ui/windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
packaging/flatpak/: io.github.luminalmvm.Lumit.yml
