[package]
name = "lumit_bridge"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

# A cdylib the Flutter Windows runner loads over dart:ffi, plus an rlib so the
# in-crate tests (and any future Rust consumer) can link the same code.
[lib]
crate-type = ["cdylib", "staticlib"]

# The `media` feature (default on) pulls lumit-media so the bridge can probe
# footage and decode frames for the F2 CPU path. `--no-default-features` drops
# it entirely, so the crate still builds and tests without FFmpeg (CI parity,
# exactly as lumit-ui gates its own media wiring).
#
# The `render` feature (default on, implies `media`) pulls lumit-ui so the
# bridge can borrow its headless compositor (`lumit_ui::headless`) for the
# composited-comp Viewer path. This is the deliberate, temporary architecture
# recorded as K-175: the bridge (a leaf) depends on the UI crate through the
# headless seam until the pixel pass moves into an engine crate. Engine crates
# still never depend on the bridge; the docs/05 arrow is unchanged.
# `--no-default-features` drops both, and the crate still builds and tests
# without FFmpeg or a GPU (CI parity) — render calls then return null.
[features]
default = ["media", "render"]
media = ["dep:lumit-media"]
# `render` also pulls lumit-audio: beat detection (docs/09 §5) mixes the comp's
# audio through the headless input builder and runs onset/tempo analysis, so it
# needs both the compositor (for the audio jobs) and the analysis crate.
render = ["media", "dep:lumit-ui", "dep:lumit-audio"]
# The Windows zero-copy Viewer path (K-177). OFF by default so the standard
# build and every gate stay identical to today; the owner builds the shipped
# `.dll` with `--features shared-texture` to turn it on. It implies `render`
# (the compositor) and forwards to lumit-ui's own `shared-texture` feature,
# which pins the D3D12 backend and pulls the shared-texture GPU code. The actual
# D3D interop is `cfg(windows)`-gated on top, so enabling it off Windows is
# inert. `lumit_bridge_shared_supported()` reports whether this build has it.
shared-texture = ["render", "lumit-ui/shared-texture"]
# The Linux zero-copy Viewer path (K-177), the DMA-BUF sibling of
# `shared-texture`. OFF by default so the standard build and every gate stay
# identical to today; the owner builds the shipped Linux `.so` with
# `--features shared-texture-linux`. It implies `render` and forwards to
# lumit-ui's own `shared-texture-linux` feature (the Vulkan/DMA-BUF GPU code).
# The Vulkan interop is `cfg(target_os = "linux")`-gated on top, so enabling it
# off Linux is inert. `lumit_bridge_shared_supported()` reports whether this build
# has it; `lumit_bridge_render_to_shared_dmabuf` is its render entry point.
shared-texture-linux = ["render", "lumit-ui/shared-texture-linux"]

[dependencies]
lumit-core = { path = "../lumit-core" }
lumit-project = { path = "../lumit-project" }
# The realtime preview-tier controller (K-030/K-171) lives here as a pure,
# tested decision core; the bridge feeds it measured render costs and reads the
# tier back (see src/realtime.rs). An engine crate, so the docs/05 layering
# (engine crates never depend on the UI) is unbroken.
lumit-eval = { path = "../lumit-eval" }
lumit-media = { path = "../lumit-media", optional = true }
# Beat detection maths (docs/09 §5), pulled by the `render` feature alongside
# lumit-ui (the audio mixdown rides the same headless input path).
lumit-audio = { path = "../lumit-audio", optional = true }
# Borrowed for its headless compositor only (K-175); its media feature carries
# the GPU/decoder wiring the renderer needs.
lumit-ui = { path = "../lumit-ui", optional = true, default-features = false, features = ["media"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
flutter_rust_bridge = "=2.12.0"

[dev-dependencies]
tempfile = "3"

# The bridge is the one crate that cannot inherit the workspace's
# `unsafe_code = "deny"`: a C ABI over raw pointers is unsafe by construction
# (docs/flutter-port/03-ARCHITECTURE.md "Bridge v0"). The clippy denies from the
# workspace are kept, so no-panic/no-unwrap discipline still holds here.
[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"

[lints.rust]
unsafe_code = "allow"

unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
